--- a/views/notFound.ejs
+++ b/views/notFound.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Not Found</title>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.1/css/bootstrap.min.css'
         integrity='sha512-T584yQ/tdRR5QwOpfvDfVQUidzfgc2339Lc8uBDtcp/wYu80d7jwBgAxbyMh0a9YM9F8N3tdErpFI8iaGx6x5g=='
         crossorigin='anonymous' />
@@ -14,15 +14,13 @@
 <body>
     <%- include('partials/navbar.ejs') %>
     <div class="m-5">
-        <h1>Ini Dashboard</h1>
-        <h3><%= user.name %> </h3>
-        <h3><%= user.email %> </h3>
-        <h3><%= user._id %> </h3>
+        <h1>Not Found</h1>
     </div>
 </body>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js'
     integrity='sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g=='
     crossorigin='anonymous'></script>
+
 <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.1/js/bootstrap.bundle.js'
     integrity='sha512-pn67a0tE9Gl7wyvnZRE8MvKmVDtXYtc/gMaVqNrg5JdlbxSQTI5oXR+Px45Kwloegn/JSPJnY4fR39ml20pI6w=='
     crossorigin='anonymous'></script>
