Perbaikan fitur auth dengan jwt

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,9 +15,10 @@
     <%- include('partials/navbar.ejs') %>
     <div class="m-5">
         <h1>Ini Dashboard</h1>
-        <h3><%= user.name %> </h3>
+        <h3><%= user.username %> </h3>
         <h3><%= user.email %> </h3>
         <h3><%= user._id %> </h3>
+        <h3><%= user%> </h3>
     </div>
 </body>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js'
