--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -28,7 +28,7 @@
             <div class="card-header">
                 <h2 class="text-center my-2">Login</h2>
             </div>
-            <form action="" method="post">
+            <form action="/users/login" method="post">
                 <div class="card-body">
                     <div class="form-group">
                         <label for="">Email</label>
