--- a/public/views/partials/navbar_dashboard.ejs
+++ b/public/views/partials/navbar_dashboard.ejs
@@ -27,7 +27,7 @@
     <!-- Right navbar links -->
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <form action="/logout" method="post">
+        <form action="/users/logout" method="post">
           <button class="btn nav-link" type="submit">Logout</button>
       </form>
       </li>
