--- a/public/views/dashboard.ejs
+++ b/public/views/dashboard.ejs
@@ -7,12 +7,12 @@
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="../assets/dashboard/plugins/fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="/assets/dashboard/plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Tempusdominus Bbootstrap 4 -->
   <!-- Theme style -->
-  <link rel="stylesheet" href="../assets/dashboard/dist/css/adminlte.css">
+  <link rel="stylesheet" href="/assets/dashboard/dist/css/adminlte.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
@@ -56,20 +56,20 @@
 <!-- ./wrapper -->
 
 <!-- jQuery -->
-<script src="../assets/dashboard/plugins/jquery/jquery.min.js"></script>
+<script src="/assets/dashboard/plugins/jquery/jquery.min.js"></script>
 <!-- jQuery UI 1.11.4 -->
-<script src="../assets/dashboard/plugins/jquery-ui/jquery-ui.min.js"></script>
+<script src="/assets/dashboard/plugins/jquery-ui/jquery-ui.min.js"></script>
 <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
 <script>
   $.widget.bridge('uibutton', $.ui.button)
 </script>
 <!-- Bootstrap 4 -->
-<script src="../assets/dashboard/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/assets/dashboard/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
-<script src="../assets/dashboard/dist/js/adminlte.js"></script>
+<script src="/assets/dashboard/dist/js/adminlte.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-<script src="../assets/dashboard/dist/js/pages/dashboard.js"></script>
+<script src="/assets/dashboard/dist/js/pages/dashboard.js"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="../assets/dashboard/dist/js/demo.js"></script>
+<script src="/assets/dashboard/dist/js/demo.js"></script>
 </body>
 </html>
