--- a/public/views/partials/navbar.ejs
+++ b/public/views/partials/navbar.ejs
@@ -20,17 +20,15 @@
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <% if (!user) { %>
             <li class="nav-item <% if (name === 'register') {%> active <% } %>">
-                <a class="nav-link" href="/register">Register</span></a>
+                <a class="nav-link" href="/users/register">Register</span></a>
             </li>
             <div class="nav-link active">|</div>
             <li class="nav-item <% if (name === 'login') {%> active <% } %>">
-                <a class="nav-link" href="/login">Login</a>
+                <a class="nav-link" href="/users/login">Login</a>
             </li>
             <% } else {%>
-            <li class="nav-item">
-                <form action="/logout" method="post">
-                    <button class="btn nav-link" type="submit">Logout</button>
-                </form>
+            <li class="nav-item <% if (name === 'dashboard') {%> active <% } %>">
+                <a class="nav-link" href="/dashboard/<%= user._id %>">Dashboard</a>
             </li>
             <% } %>
         </ul>
