--- a/public/views/partials/sidebar_dashboard.ejs
+++ b/public/views/partials/sidebar_dashboard.ejs
@@ -1,7 +1,7 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="index3.html" class="brand-link">
-      <img src="../assets/dashboard/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+      <img src="/assets/dashboard/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
            style="opacity: .8">
       <span class="brand-text font-weight-light">AdminLTE 3</span>
     </a>
@@ -11,7 +11,7 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="../assets/dashboard/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+          <img src="/assets/dashboard/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
           <a href="#" class="d-block"> <%- user.username %> </a>
@@ -24,7 +24,7 @@
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
           <li class="nav-item">
-            <a href="/dashboard" class="nav-link <% if (name === 'dashboard') {%> active <% } %>">
+            <a href="/dashboard/<%= user._id%>" class="nav-link <% if (name === 'dashboard') {%> active <% } %>">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
                 Dashboard
@@ -32,7 +32,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="/dashboard/posts" class="nav-link <% if (name === 'post_dashboard') {%> active <% } %>">
+            <a href="/dashboard/posts/<%= user._id %>" class="nav-link <% if (name === 'post_dashboard') {%> active <% } %>">
               <i class="nav-icon fas fa-edit"></i>
               <p>
                 Posts
