--- a/public/views/partials/form_post_create.ejs
+++ b/public/views/partials/form_post_create.ejs
@@ -8,7 +8,7 @@
           </button>
       </div>
       <div class="modal-body">
-        <form action="/dashboard/posts" method="post">
+        <form action="/dashboard/posts/create" method="post">
           <div class="form-group">
             <label for="">Title</label>
             <input type="text" class="form-control" name="title" id="" aria-describedby="helpId" placeholder="">
@@ -18,11 +18,6 @@
             <label for="">Article</label>
             <textarea class="form-control" name="article" id="" rows="3"></textarea>
           </div>
-            <div class="form-group">
-              <label for="">Image</label>
-              <input type="text" class="form-control-file" name="image" id="" placeholder="" aria-describedby="fileHelpId">
-              <small id="fileHelpId" class="form-text text-muted">Insert image</small>
-            </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
               <button type="submit" class="btn btn-primary">Save</button>
