--- a/public/views/posts.ejs
+++ b/public/views/posts.ejs
@@ -13,7 +13,11 @@
 
 <body>
     <%- include('partials/navbar.ejs') %>
-    <h1 class="m-5">Ini Post</h1>
+    <div class="container mt-5">
+        <h3><%= post.title %></h3>
+        <p ><%= post.article %></p>
+        <a href="/" title=""><- Back</a>
+    </div>
 </body>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js'
     integrity='sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g=='
